# yocto-fetcher

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
test/: test_gitfetcher.py
yocto_fetcher/: __main__.py  gitfetcher.py  version.py
