[project]
name = "yocto-fetcher"
dynamic = ["version"]
authors = [{name = "jhnc-oss"}]
description = "Fetches Yocto Bitbake compatible source tarballs"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["yocto", "yocto-tools", "bitbake", "fetcher"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/jhnc-oss/yocto-fetcher"

[project.scripts]
yoctofetcher = "yocto_fetcher.__main__:main"

[project.optional-dependencies]
dev = [
    "pylint == 3.2.3",
    "pytest == 8.2.2",
    "ruff == 0.4.7"
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "yocto_fetcher.version.__version__"}

[tool.setuptools.packages.find]
include = ["yocto_fetcher"]

