[project]
name = "yocto-fetcher"
dynamic = ["version"]
authors = [{name = "jhnc-oss"}]
description = "Fetches Yocto Bitbake compatible source tarballs"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.9"
keywords = ["yocto", "yocto-tools", "bitbake", "fetcher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.urls]
"Homepage" = "https://github.com/jhnc-oss/yocto-fetcher"

[project.scripts]
yoctofetcher = "yocto_fetcher.__main__:main"

[project.optional-dependencies]
dev = [
    "pylint == 3.3.9",
    "pytest == 8.4.2",
    "ruff == 0.14.9",
    "pyrefly==0.46.0"
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "yocto_fetcher.version.__version__"}

[tool.setuptools.packages.find]
include = ["yocto_fetcher"]

