[project]
name = "yocto-fetcher"
dynamic = ["version"]
authors = [{name = "jhnc-oss"}]
description = "Fetches Yocto Bitbake compatible source tarballs"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
keywords = ["yocto", "yocto-tools", "bitbake", "fetcher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.urls]
"Homepage" = "https://github.com/jhnc-oss/yocto-fetcher"

[project.scripts]
yoctofetcher = "yocto_fetcher.__main__:main"

[project.optional-dependencies]
dev = [
    "pylint == 4.0.5",
    "pytest == 9.1.0",
    "ruff == 0.15.17",
    "pyrefly==1.0.0"
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "yocto_fetcher.version.__version__"}

[tool.setuptools.packages.find]
include = ["yocto_fetcher"]

